--- a/index.html
+++ b/index.html
@@ -103,19 +103,6 @@
                         </div>
                     </a>
 
-                    <a href="https://github.com/UWRobotLearning/WheeledLab-research" target="_blank" rel="noopener" class="research-item">
-                        <div class="research-info">
-                            <div class="research-tags">
-                                <span class="tag" data-en="Imitation Learning" data-zh="模仿学习">Imitation Learning</span>
-                                <span class="tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
-                                <span class="tag" data-en="Algorithm Improvement" data-zh="算法改进">Algorithm Improvement</span>
-                            </div>
-                            <h3 data-en="Algorithmic Enhancements for Stable and Sample-Efficient Real-World Model Predictive Adversarial Imitation Learning" data-zh="基于算法优化的模型预测对抗式模仿学习稳定性与效率提升研究">Algorithmic Enhancements for Stable and Sample-Efficient Real-World Model Predictive Adversarial Imitation Learning</h3>
-                            <p class="research-venue" data-en="Research at Robot Learning Lab" data-zh="Robot Learning Lab 研究">Research at Robot Learning Lab</p>
-                            <p class="research-note" data-en="(The source code has not been made public yet)" data-zh="(源代码暂未公开)">(The source code has not been made public yet)</p>
-                        </div>
-                    </a>
-
                     <a href="https://drive.google.com/file/d/1WjOLkm7fvjSG_7Px5Byn78gCID0NB2YJ/view?usp=sharing" target="_blank" rel="noopener" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
@@ -123,8 +110,8 @@
                                 <span class="tag" data-en="DDS" data-zh="DDS">DDS</span>
                                 <span class="tag" data-en="MoveIt" data-zh="MoveIt">Moveit</span>
                             </div>
-                            <h3 data-en="GIX Community Farm - Integrated Robotic Task Execution System" data-zh="GIX 社区农场 - 集成机器人任务执行系统">GIX Community Farm - Integrated Robotic Task Execution System</h3>
-                            <p class="research-venue" data-en="Project For Course TECHIN517" data-zh="TECHIN517 课程项目">Project for course TECHIN517</p>
+                            <h3 data-en="From Speech to Delivery: Human-Centered Multimodal Interaction for Indoor Service Robotics" data-zh="从语音到配送：室内服务机器人的人本多模态交互">From Speech to Delivery: Human-Centered Multimodal Interaction for Indoor Service Robotics</h3>
+                            <p class="research-venue" data-en="HRI 2026" data-zh="HRI 2026">HRI'26</p>
                         </div>
                     </a>
                 </div>
