--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                         <p><span data-en="University of Washington" data-zh="华盛顿大学">University of Washington</span></p>
                         <p class="email-link">
                             <a href="mailto:andyshen@uw.edu">andyshen@uw.edu</a>
+                            <br class="zh-only" style="display: none;">
+                            <a href="mailto:3200105595@zju.edu.cn" class="zh-only" style="display: none;">3200105595@zju.edu.cn</a>
                         </p>
                     </div>
                 </div>
@@ -92,26 +94,24 @@
                     <a href="https://uwrobotlearning.github.io/mpail2/" target="_blank" rel="noopener" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
-                                <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>
-                                <span class="tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
-                                <span class="tag" data-en="Reinforcement Learning" data-zh="模仿学习">Reinforcement Learning</span>
+                                <span class="tag" data-en="Inverse Reinforcement Learning" data-zh="逆强化学习">Inverse Reinforcement Learning</span>
                                 <span class="tag" data-en="Model Predictive Control" data-zh="模型预测控制">Model Predictive Control</span>
-                                <span class="tag" data-en="Real-World Learning" data-zh="真机学习">Real-World Learning</span>
+                                <span class="tag" data-en="Real-world Learning" data-zh="真机学习">Real-world Learning</span>
                             </div>
-                            <h3 data-en="Real-World Model Predictive Adversarial Imitation Learning" data-zh="真机模型预测对抗模仿学习">Online Training with Model Predictive Adversarial Imitation Learning</h3>
-                            <p class="research-venue" data-en="Summer Research Project at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究项目">Summer Research at Robot Learning Lab @ UW</p>
+                            <h3 data-en="Planning from observation and interaction" data-zh="从观察到交互的规划">Planning from observation and interaction</h3>
+                            <p class="research-venue" data-en="Under review at RSS 2026" data-zh="Under review at RSS 2026">Under review at RSS 2026</p>
                         </div>
                     </a>
 
-                    <a href="https://drive.google.com/file/d/1WjOLkm7fvjSG_7Px5Byn78gCID0NB2YJ/view?usp=sharing" target="_blank" rel="noopener" class="research-item">
+                    <a href="project-hri.html" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
-                                <span class="tag" data-en="ROS2" data-zh="ROS2">ROS2</span>
-                                <span class="tag" data-en="DDS" data-zh="DDS">DDS</span>
-                                <span class="tag" data-en="MoveIt" data-zh="MoveIt">Moveit</span>
+                                <span class="tag" data-en="Human-Robot Interaction" data-zh="人机交互">Human-Robot Interaction</span>
+                                <span class="tag" data-en="Physical AI" data-zh="物理智能">Physical AI</span>
+                                <span class="tag" data-en="Mobile Manipulation" data-zh="移动操作">Mobile Manipulation</span>
                             </div>
-                            <h3 data-en="From Speech to Delivery: Human-Centered Multimodal Interaction for Indoor Service Robotics" data-zh="从语音到配送：室内服务机器人的人本多模态交互">From Speech to Delivery: Human-Centered Multimodal Interaction for Indoor Service Robotics</h3>
-                            <p class="research-venue" data-en="HRI 2026" data-zh="HRI 2026">HRI'26</p>
+                            <h3 data-en="From Speech to Delivery: Human-Centered Multimodal Interaction for Indoor Service Robotics" data-zh="从语音到配送：室内服务机器人以人为本的多模态交互">From Speech to Delivery: Human-Centered Multimodal Interaction for Indoor Service Robotics</h3>
+                            <p class="research-venue" data-en="Human-Robot Interation (HRI), 2026" data-zh="Human-Robot Interation (HRI), 2026">Human-Robot Interation (HRI), 2026</p>
                         </div>
                     </a>
                 </div>
@@ -167,7 +167,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 Siyang Shen. All rights reserved.</p>
+            <p>&copy; 2026 Siyang Shen. All rights reserved.</p>
         </div>
     </footer>
 
